--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background-image: url("https://images6.alphacoders.com/321/thumb-1920-321927.jpg");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 60px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  border: 2px solid black;
+  max-width: 400px;
+  margin: auto;
+  margin-top: 25px;
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  margin-bottom: 25px;
+  margin-left: 15px;
+  margin-top: 25px;
 }
+
+
