--- a/project/src/card.css
+++ b/project/src/card.css
@@ -1,15 +1,43 @@
 .card {
-  border: 2px solid black;
+  border: 2px solid white;
   max-height: 800px;
   max-width: 400px;
   margin: auto;
   border-radius: 45px;
-  background-color: white;
+  background-color: #124c38;
+  color: white;
 }
 
 img {
   height: 500px;
   width: 350px;
-  border-radius: 90px;
+  border-radius: 60px;
   padding-bottom: 25px;
+  /* border: 1px solid white; */
+}
+
+p {
+  font-size: 18px;
+}
+
+@media screen and (max-width: 600px) {
+
+  .card {
+    border: 2px solid black;
+    max-height: 550px;
+    max-width: 300px;
+    margin: auto;
+    border-radius: 45px;
+  }
+
+  img {
+    height: 300px;
+    width: 200px;
+    border-radius: 60px;
+    padding-bottom: 10px;
+  }
+
+  p {
+    font-size: 16px;
+  }
 }
